[package]
name = "notion-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
clap = { version = "3.2.22", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.23"
notion = "0.4.1"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.2"
reqwest = "0.11.11"
serde = "1.0.143"
serde_json = "1.0.85"
thiserror = "1.0.34"
tokio = { version = "1.20.1", features = ["full"] }
url = "2.3.1"
uuid = "1.1.2"

[dev-dependencies]
pretty_assertions = "1.2.1"
